--- a/view/main.html
+++ b/view/main.html
@@ -1,3 +1,22 @@
 <div ng-controller="mainCtrl">
-    <div id="map"></div>
+    <section class="vehicle-count-pie-chart-area">
+        <figure>
+            <figcaption>
+                pie chart
+            </figcaption>
+            <div class="pie-chart">
+                
+            </div>
+        </figure>
+    </section>
+    <section class="vehicle-passenger-count-bar-chart-area">
+        <figure>
+            <figcaption>
+                bar chart
+            </figcaption>
+            <div class="bar-chart">
+                
+            </div>
+        </figure>
+    </section
 </div>
