--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -45,3 +45,33 @@ a {
   width: 100%;
   height: 500px;
 }
+
+.vehicle-count-pie-chart-area {
+  width: 500px;
+  height: 600px;
+}
+.vehicle-count-pie-chart-area figure figcaption {
+  width: inherit;
+  height: 100px;
+  font-size: 20px;
+  text-align: center;
+}
+.vehicle-count-pie-chart-area figure .pie-chart {
+  width: inherit;
+  height: 500px;
+}
+
+.vehicle-passenger-count-bar-chart-area {
+  width: 100%;
+  height: 700px;
+}
+.vehicle-passenger-count-bar-chart-area figure figcaption {
+  width: inherit;
+  height: 100px;
+  font-size: 20px;
+  text-align: center;
+}
+.vehicle-passenger-count-bar-chart-area figure .bar-chart {
+  width: inherit;
+  height: 500px;
+}
