--- a/style/mystyle.scss
+++ b/style/mystyle.scss
@@ -41,3 +41,37 @@ a {
     width: 100%;
     height: 500px;
 }
+
+//------------main.html
+.vehicle-count-pie-chart-area {
+    width: 500px;
+    height: 600px;
+    figure {
+        figcaption {
+            width: inherit;
+            height: 100px;
+            font-size: 20px;
+            text-align: center;
+        }
+        .pie-chart {
+            width: inherit;
+            height: 500px;
+        }
+    }
+}
+.vehicle-passenger-count-bar-chart-area {
+    width: 100%;
+    height: 700px;
+    figure {
+        figcaption {
+            width: inherit;
+            height: 100px;
+            font-size: 20px;
+            text-align: center;
+        }
+        .bar-chart {
+            width: inherit;
+            height: 500px;
+        }
+    }
+}
