--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -5,73 +5,221 @@
   font-family: '微软雅黑';
 }
 
+body {
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+.header {
+  text-transform: none !important;
+}
+
 ul {
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
+}
+
+.row {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+figcaption {
+  width: inherit;
+  height: 70px;
+  font-size: 25px;
+  line-height: 70px;
+}
+figcaption span {
+  width: 23px;
+  height: 70px;
+  margin-left: -25px;
+  display: inline-block;
+}
+figcaption span .icon {
+  width: inherit;
+  height: 24px;
+}
+
+section p {
+  font-size: 18px;
+  line-height: 30px;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+
+.hr {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.hr hr {
+  opacity: .5;
 }
 
 .border-shadow {
-  box-shadow: 1px 0 3px 0 #000;
+  box-shadow: 1px 0 3px 0 #A8A8A8;
 }
 
 .my-nav {
   width: 100%;
   height: 40px;
+  background: #EAEAEA;
 }
-.my-nav h3 {
+.my-nav .row {
+  margin: 0 auto;
+}
+.my-nav .row h4 {
   height: 100%;
   line-height: 40px;
   margin-left: 20px;
   display: inline-block;
 }
-.my-nav ul {
+.my-nav .row ul {
   height: 100%;
   float: right;
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 20px;
   line-height: 40px;
 }
-.my-nav ul li {
+.my-nav .row ul .item1 {
   display: inline-block;
   height: 100%;
   margin: 0 5px;
   font-size: 15px;
+  cursor: pointer;
 }
 
-#map {
-  width: 100%;
-  height: 500px;
-}
-
-.vehicle-count-pie-chart-area {
-  width: 500px;
-  height: 600px;
-}
-.vehicle-count-pie-chart-area figure figcaption {
-  width: inherit;
-  height: 100px;
-  font-size: 20px;
-  text-align: center;
-}
-.vehicle-count-pie-chart-area figure .pie-chart {
-  width: inherit;
-  height: 500px;
-}
-
-.vehicle-passenger-count-bar-chart-area {
-  width: 100%;
+.intro-box {
+  width: 900px;
   height: 700px;
+  margin: auto;
+  background: #F4F4F4;
+  border-radius: 5px;
+  display: none;
 }
-.vehicle-passenger-count-bar-chart-area figure figcaption {
+.intro-box .title {
   width: inherit;
-  height: 100px;
-  font-size: 20px;
-  text-align: center;
+  height: 50px;
+  background: #EAEAEA;
+  border-bottom: 1px solid #ccc;
+  padding: 1px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
-.vehicle-passenger-count-bar-chart-area figure .bar-chart {
+.intro-box .title h3 {
+  line-height: 50px;
+}
+.intro-box .content {
+  width: inherit;
+  height: 580px;
+  padding: 1px;
+  position: relative;
+}
+.intro-box .content .item {
+  width: 898px;
+  height: 578px;
+  position: absolute;
+}
+.intro-box .content .item2 {
+  background: #ccc;
+}
+.intro-box .content .item1 {
+  background: #000;
+}
+.intro-box .content .item3 {
+  background: red;
+}
+.intro-box .control {
+  width: inherit;
+  height: 50px;
+  border-top: 1px solid #ccc;
+}
+.intro-box .control button {
+  width: 50px;
+  height: 30px;
+  margin-top: 15px;
+}
+
+.card {
+  border: 1px solid #ccc;
+  padding: 10px 10px;
+  padding-bottom: 50px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px #ccc;
+}
+
+.margin-fix {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.axis path {
+  fill: none;
+}
+
+.intro-area {
+  width: 100%;
+}
+.intro-area figure figcaption {
+  color: #eb4f38;
+}
+
+.info-tree-area {
+  width: 100%;
+}
+.info-tree-area figure figcaption {
+  color: #9d55b8;
+}
+.info-tree-area figure .tree-chart {
+  width: 100%;
+  height: 350px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.detail-area {
+  width: 100%;
+}
+.detail-area figure figcaption {
+  color: #11cd6e;
+}
+.detail-area figure .pie-area .pie-chart {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+}
+.detail-area figure .pie-area .pie-table {
+  display: inline-block;
+  width: 580px;
+  float: right;
+  padding-left: 80px;
+}
+.detail-area figure .bar-area .bar-chart-count,
+.detail-area figure .bar-area .bar-chart-passenger {
   width: inherit;
   height: 500px;
+}
+
+.info-map-area {
+  width: 100%;
+}
+.info-map-area figure figcaption {
+  color: #d22929;
+}
+.info-map-area figure #info-map {
+  height: 350px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.data {
+  height: 1000px;
+  background: #000;
 }
